--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -5,6 +5,10 @@
 	* use runperl.bat (from ActivePerl distribution) to run opp_test,
 	opp_makedep, opp_nmakemake from Windows command prompt
 
+	* removed 'require Cwd' from perl scripts: we don't want to use any
+	Perl modules, to avoid having to bundle a full Perl distribution into
+	the Windows installer
+
 2002-11-14  Andras Varga
 
 	* opp_test: changes for Windows
