--- a/samples/README
+++ b/samples/README
@@ -80,4 +80,7 @@ D: dynamic module creation
    using WATCH() 
    star topology with the number of modules as parameters 
 
-
+Topology
+========
+T: NED
+D: demonstrates topologies
