--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,9 @@
+2002-12-17  Andras Varga
+
+	* cobject.h: check_and_cast<T>(cObject *p) template function added --
+	it does safe (dynamic) typecast and throws exception if the pointer
+	types are incompatible. Useful with message subclassing.
+
 2002-12-02  Andras Varga
 	* cmessage.h: added convenience methods: addObject(), getObject(), 
 	hasObject(), removeObject(). Refined related documentation and 
