--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,9 @@
+2002-12-22  Andras Varga
+
+	* jar.c: zero module vector size crashed network setup code. Temprarily,
+	check_module_count() changed to make zero size an error. This will
+	be fixed in nedtool: zero size should be allowed and properly handled.
+
 2002-12-07  Andras Varga
 
 	* msgc.pl was renamed opp_msgc, and now it gets copied to the bin/ 
