--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-10  Andras Varga
+
+	* implemented object tree view on left of main Tkenv window
+
 2003-01-06  Andras Varga
 
 	* misc improvements: display string added to module inspectors
