--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,8 @@
+2003-01-11  Andras Varga
+
+	* main.tcl: appearance of menus on Unix made more contemporary 
+	(via option add's)
+
 2003-01-10  Andras Varga
 
 	* implemented object tree view on left of main Tkenv window
