--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-12  Andras Varga
+
+	* tree view improved
+
 2003-01-11  Andras Varga
 
 	* main.tcl: appearance of menus on Unix made more contemporary 
