--- a/samples/token/ChangeLog
+++ b/samples/token/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-17  Andras Varga
+
+	* practically rewritten from scratch, using message classes
+
 2002-05-04  ------ omnetpp-2.2 released ------
 
 2002-04-07  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
