--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,3 +1,8 @@
+2003-01-19  Andras Varga
+
+	* Cygwin fixes; put checkTckTkVersion and setupTkOptions (was generic_-
+	bindings) into widgets.tcl
+
 2003-01-12  Andras Varga
 
 	* tree view improved
