added distributions in distrib.h; RNG stuff moved to random.h from util.h

--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,17 @@
+2003-01-19  Andras Varga
+
+	* distrib.h (new): contains function declarations for distributions 
+	contributed by Werner Sandmann (TU Bonn): continuous distributions
+        gamma_d(), beta(), erlang_k(), chi_square(), student_t(), cauchy(), 
+        triang(),lognormal(), weibull(), pareto_shifted(), and discrete
+        distributions bernoulli(), binomial(), geometric(), negbinomial(),
+        hypergeometric(), poisson()
+	
+	* random.h (new), distrib.h; utils.h: From util.h, existing 
+	distributions (uniform, normal,	exponential, etc) were moved to 
+	distrib.h, and random number generator functions were moved to new file
+	random.h.
+
 2003-01-14  Andras Varga
 
 	* cwatch.h: added support for 'bool'
