--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-20  Andras Varga
+
+	* contents of obsolete header cstk.h removed
+
 2003-01-19  Andras Varga
 
 	* distrib.h (new): contains function declarations for distributions 
