--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-20  Andras Varga
+
+	* removed obsolete file cstk.cc
+
 2003-01-19  Andras Varga
 
 	* distrib.cc (new): contains implementations of distributions 
