--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-22  Andras Varga
+
+	* jar_expr.c: adopted to increased type safety of cFunctionType
+
 2003-01-04  Andras Varga
 
 	* opp_msgc: added support for cplusplus { ... }; syntax
