--- a/samples/token/ChangeLog
+++ b/samples/token/ChangeLog
@@ -1,3 +1,10 @@
+2003-01-26  Andras Varga
+
+	* introduced max buffer length in MAC: if packets from app cannot be
+	buffered, they're discarded
+
+	* omnetpp.ini: added Run 3 with 100 stations on the ring
+
 2003-01-17  Andras Varga
 
 	* practically rewritten from scratch, using message classes
