--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-29  Andras Varga
+
+	* chead.h: added argcount paremeter to findFunction()
+
 2003-01-22  Andras Varga
 
 	* ctypes.h, macros.h: increased type safety of Register_Function() and 
