added Finish button to toolbar

--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-29  Andras Varga
+
+	* added "Finish" to main toolbar
+
 2003-01-23  Andras Varga
 
 	* "Step" button in module inspectors replaced with 3 buttons ("Run 
