--- a/samples/fifo1/ChangeLog
+++ b/samples/fifo1/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-29  Andras Varga
+
+	* Readme updated
+
 2002-05-04  ------ omnetpp-2.2 released ------
 
 2002-04-07  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
