--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2003-01-30  Andras Varga
+
+	* defs.h: added MathFunc4Args (it was needed by triang() and other 
+	distributions); also added its handling where needed
+
 2003-01-29  Andras Varga
 
 	* chead.h: added argcount paremeter to findFunction()
