--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-30  Andras Varga
+
+	* added handling of new MathFunc4Args
+
 2003-01-22  Andras Varga
 
 	* jar_expr.c: adopted to increased type safety of cFunctionType
