*** empty log message ***

--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -10,7 +10,7 @@
 	* double click on a submodule which is a simple module now opens 
 	module properties dialog
 
-	* increased default size of compound module
+	* increased default size of enclosing module rectangle
 
 2003-01-19  Andras Varga
 
